bad/assign_arr_length_string.example_compiler_output
ERROR
[1mbad/assign_arr_length_string.lat:4:22: [1;31merror: [0;1mleft side is not assignable[m
	(new int[3]).length = "";
	                    [1;32m^[m
[1mbad/assign_arr_length_string.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	(new int[3]).length = "";
	[1;32m^[m
